Add dependency on 'icurry'

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "category": [ "Programming" ],
     "license": "BSD-3-Clause",
     "licenseFile": "LICENSE",
-    "dependencies": {},
+    "dependencies": {
+        "icurry": ">= 3.0.0, < 4.0.0"
+    },
     "executable": {
         "name": "llcurry",
         "main": "LLCurry.Main"
