--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "licenseFile": "LICENSE",
     "dependencies": {
         "icurry": ">= 3.0.0, < 4.0.0",
-        "transformers": ">= 3.0.0, < 4.0.0"
+        "transformers": ">= 3.0.0, < 4.0.0",
+        "wl-pprint": ">= 3.0.0, < 4.0.0"
     },
     "executable": {
         "name": "llcurry",
